added validation for input new model Room new relations user->meet->room edit Swagger edit README.md
